--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -442,7 +442,7 @@ var _hmt = _hmt || [];
 
 <!-- Google Adsense -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1683686345039700"
-     crossorigin="anonymous" data-swup-ignore-script></script>
+     crossorigin="anonymous"></script>
 <!-- end of Google Adsense-->
 
 <noscript>Free cookie consent management tool by <a href="https://www.termsfeed.com/">TermsFeed</a></noscript>
